--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,6 +34,19 @@
                         <p>Take a comforting bath after a long day of new experiences.</p>
                     </div>
                 </div>  
+        </div>
+        
+        <!-- MAP SECTION -->
+        <div id="mapouter">
+            <div class="gmap_canvas">
+                <h2 id="map-h2">Where is Finestrat?</h2>
+                <iframe width="486" height="405" id="gmap_canvas" src="https://maps.google.com/maps?q=finestrat&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+                </iframe>
+                <a href="https://123movies-to.org"></a>
+                <br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style>
+                <a href="https://www.embedgooglemap.net">google maps code generator</a>
+                <style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
+            </div>
         </div>
 
         <!-- GUIDE SECTION -->
